# repro-build

./: Cargo.toml  LICENSE  README.md  flake.nix  project.md  repx.toml
.repro-build/: flake.nix  flake.nix.old  flake.nix.works
.repx/: .gitignore  flake.nix
src/: build_integration.rs  config.rs  container_utils.rs  execute_build.rs  execute_command.rs  file_comparison.rs  generate_flake.rs  generate_lock.rs  lib.rs  logging.rs  main.rs
templates/: flake.nix.hbs  flake.nix.tera
